wording clarications for translation - Mojo doc 1057158

--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -9,10 +9,7 @@ understand the limitations of your current environment and plan for
 growth.
 
 For some capacity and utilization data, CloudForms Management Engine
-calculates and shows trend lines in the charts. Trend lines are created
-using linear regression. The calculation uses the capacity and
-utilization data collected by CloudForms Management Engine during the
-interval you specify for the chart. The more data you have the better the
+calculates and shows trend lines in the charts. Trend lines are created using linear regression, which is calculated using the capacity and utilization data collected by CloudForms Management Engine during the interval you specify for the chart. The more data you have the better the
 predictive value of the trend line.
 
 There are three server roles associated with the collection and metric
@@ -37,9 +34,8 @@ creation of capacity and utilization.
 
 === Assigning the Capacity and Utilization Server Roles
 
-. Navigate to *Configure → Configuration*.
-. Navigate to the *Server → Server Control* area, and select the appropriate
-  Capacity & Utilization roles from the list based on your configuration.
+. Navigate to *Configure → Configuration*, and select the server to configure from *Settings → Zone* in the left pane of the Appliance.
+. Navigate to the *Server → Server Control* area, and select the appropriate Capacity & Utilization roles from the list based on your configuration.
 . Click *Save*.
 
 Data collection begins immediately. However, the first collection begins
@@ -133,13 +129,12 @@ service postgresql reload
 
 After creating the new user, add the user's credentials to the settings for the provider.
 
-. From *Infrastructure → Providers*, click a provider to update its
-  settings.
-. Click image:1847.png[](+Configuration+), and then image:1851.png[](+Edit this Provider+).
-. In the Credentials area, click *C & U Database*.
+. From *Infrastructure → Providers*, select an infrastructure provider to update its settings.
+. Click image:1847.png[]*Configuration*, and then image:1851.png[]*Edit Selected Infrastructure Provider*.
+. In the *Credentials* area, click *C & U Database*.
 . Type in the credentials for the new database user you created.
 . Click *Save*.
-. Finally, restart the capacity and utilization data collector. For
+. Restart the capacity and utilization data collector. For
   more information, see the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] guide.
 
 === Data Collection for Red Hat Enterprise Linux OpenStack Platform
