--- a/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
+++ b/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
@@ -1,7 +1,7 @@
 [[introduction_to_Red_Hat_cloudforms]]
 == Introduction to Red Hat CloudForms
 
-CloudForms Management Engine delivers the insight, control, and automation enterprises need to address the challenges of managing virtual environments.
+CloudForms Management Engine delivers the insight, control, and automation that enterprises need to address the challenges of managing virtual environments.
 This technology enables enterprises with existing virtual infrastructures to improve visibility and control, and those starting virtualization deployments to build and operate a well-managed virtual infrastructure.
 
 Red Hat CloudForms 4.0 is comprised of a single component, the CloudForms Management Engine. It has the following feature sets:
@@ -26,7 +26,7 @@ It is the definitive source of intelligence collected about your Virtual Infrast
 * The CloudForms Management Engine Console (Console) is the Web interface used to view and control the Server and Appliance.
 It is consumed through Web 2.0 mash-ups and web services (WS Management) interfaces.
 * The SmartProxy can reside on the Appliance or on an ESX Server. If not embedded in the Server, the SmartProxy can be deployed from the Appliance.
-Each storage location must have a SmartProxy with visibility to it. The SmartProxy acts on behalf of the Appliance communicating with it over HTTPS on standard port 443.
+A SmartProxy agent must configured in each storage location, and must be visible to the Appliance. The SmartProxy acts on behalf of the Appliance communicating with it over HTTPS on standard port 443.
 
 === Requirements
 
@@ -51,7 +51,7 @@ Due to browser limitations, Red Hat supports logging in to only one tab for each
 
 The following terms are used throughout this document. Review them before proceeding.
 
-Account Role:: A designation assigned to a user allowing or restricting a user to parts and functions of the CloudForms Management Engine console.
+Account Role:: The level of access a user has to different parts and functions of the CloudForms Management Engine console. There are a variety of Account Roles, which can be assigned to users to restrict or allow access to parts of the console and virtual infrastructure.
 
 Action:: An execution that is performed after a condition is evaluated.
 
@@ -72,7 +72,7 @@ CloudForms Management Engine Server:: The application that runs on the CloudForm
 
 Cluster:: Hosts that are grouped together to provide high availability and load balancing.
 
-Condition:: A test of criteria triggered by an event.
+Condition:: A control policy test triggered by an event, which determines a subsequent action.
 
 Discovery:: Process run by the CloudForms Management Engine server which finds virtual machine and cloud providers.
 
@@ -134,7 +134,7 @@ Virtual machines utilize the hardware infrastructure of a physical host, or a se
 
 Virtual Management Database (VMDB):: Database used by the CloudForms Management Engine Appliance to store information about your resources, users, and anything else required to manage your virtual enterprise.
 
-Virtual Thumbnail:: An icon divided into smaller areas that summarize the properties of a resource.
+Virtual Thumbnail:: An image in the web interface representing a resource, such as a provider or a virtual machine, showing the resource's properties at a glance. Each virtual thumbnail is divided into quadrants, which provide information about the resource, such as its software and power state.
 
 Zones:: CloudForms Management Engine Infrastructure can be organized into zones to configure failover and to isolate traffic. Zones can be created based on your environment.
 Zones can be based on geographic location, network location, or function. When first started, new servers are put into the default zone.
