--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -1,47 +1,46 @@
 = Adding OpenStack Providers
 
-CloudForms Management Engine supports operating with the OpenStack "admin" tenant.
+CloudForms Management Engine supports operating with the OpenStack 'admin' tenant.
 When creating an OpenStack provider in CloudForms Management Engine, select the OpenStack provider's admin user because it is the default administrator of the OpenStack admin tenant.
 When using the admin credentials, a user in CloudForms Management Engine provisions into the admin tenant, and sees images, networks, and instances that are associated with the admin tenant. 
 
 . Navigate to menu:Clouds[Providers]. 
-. Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a New Cloud Provider)]. 
-. Enter a #Name# for the provider. 
-. From the #Type# drop down menu select #OpenStack#. 
-. Enter the #Host Name (or IPv4 or IPv6 address)# of the provider. 
+. Click  image:images/1847.png[] (*Configuration*), then click  image:images/1848.png[] (*Add a New Cloud Provider*). 
+. Enter a *Name* for the provider. 
+. From the *Type* drop down menu select *OpenStack*. 
+. Enter the *Host Name (or IPv4 or IPv6 address)* of the provider. 
 +
-IMPORTANT: The #Host Name# must use a unique fully qualified domain name. 
+IMPORTANT: The *Host Name* must use a unique fully qualified domain name. 
 
-. Enter the #API Port# of your Keystone service. 
-  The default port is [literal]+5000+. 
+. Enter the *API Port* of your Keystone service. 
+  The default port is '5000'. 
 +
 IMPORTANT: If the Keystone service is configured to use SSL, you must enter the SSL port for Keystone. 
 
-. Select the appropriate #API Version# from the list. The default is [literal]+Keystone v2+. 
-. Select the appropriate #Zone# for the provider.
-  By default, the zone is set to #default#. 
-. In the #Credentials# area, under #Default#, provide the login credentials required for the Keystone user: 
+. Select the appropriate *API Version* from the list. The default is 'Keystone v2'. 
+. Select the appropriate *Zone* for the provider.
+  By default, the zone is set to *default*. 
+. In the #Credentials# area, under *Default*, provide the login credentials required for the Keystone user: 
 +
 IMPORTANT: To enable discovery of OpenStack cloud providers, ensure that the [path]_iptables_ for the OpenStack host providing Keystone services allows port 5000 access to all hosts on the same network. 
 +
-* Enter the user name in the #Username# field. 
-* Enter the user password in the #Password# field. 
-* Confirm the user password in the #Confirm Password# field. 
-* Click btn:[Validate] to confirm CFME can connect to the OpenStack Infrastructure instance. 
+* Enter the user name in the *Username* field. 
+* Enter the user password in the *Password* field. 
+* Confirm the user password in the *Confirm Password* field. 
+* Click *Validate* to confirm CFME can connect to the OpenStack Infrastructure instance. 
 
-. If AMQP credentials were changed during the OpenStack provider install, use the #AMQP# tab of the #Credentials# area to provide the login credentials required for the Advanced Message Queuing Protocol messaging service on your OpenStack Nova component: 
+. If AMQP credentials were changed during the OpenStack provider install, use the *AMQP* tab of the #Credentials# area to provide the login credentials required for the Advanced Message Queuing Protocol messaging service on your OpenStack Nova component: 
 +
-* Enter the administrative user name in the #Username# field. 
-* Enter the user password in the #Password# field. 
-* Confirm the user password in the #Confirm Password# field. 
-* Click btn:[Validate] to confirm CFME can connect to the messaging service. 
-
-. Click btn:[Add]. 
+* Enter the administrative user name in the *Username* field. 
+* Enter the user password in the *Password* field. 
+* Confirm the user password in the *Confirm Password* field. 
+* Click *Validate* to confirm CFME can connect to the messaging service. 
+. Click *Add*. 
 
 [NOTE]
 ======
 In order to collect inventory and metrics from an OpenStack environment, the CloudForms Management Engine Appliance requires that the adminURL endpoint for the OpenStack environment should be on a non-private network.
-Hence, the OpenStack adminURL endpoint should be assigned an IP address other than [literal]+192.168.x.x+. 
+Hence, the OpenStack adminURL endpoint should be assigned an IP address other than '192.168.x.x'. 
 ======
 
 [NOTE]
