updated the definition of "Host" for clarity.

--- a/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
+++ b/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
@@ -82,7 +82,7 @@ Event:: A trigger to check a condition.
 
 Event Monitor:: Software on the CloudForms Management Engine Appliance which monitors external providers for events and sends them to the CloudForms Management Engine server.
 
-Host:: A computer on which virtual machine monitor software is loaded.
+Host:: A computer running a hypervisor, capable of hosting and monitoring VMs. Supported hypervisors include RHEV-H, VMWare ESX hosts, Windows Hyper-V hosts.
 
 Instance/Cloud Instance:: A on-demand virtual machine based upon a predefined image and uses a scalable set of hardware resources such as CPU, memory, networking interfaces.
 
