--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -13,11 +13,11 @@ The CloudForms Management Engine Appliance is intended to have minimal configura
 The procedure describes how to make changes to the configuration settings on the CloudForms Management Engine appliance.
 
 . After starting the appliance, log in with a user name of 'root'and the default password of 'smartvm'. This displays the Bash prompt for the *root* user.
-. Enter the 'appliance_console' command. The *CloudForms Management Engine Appliance summary screen* displays.
-. Press 'Enter' to manually configure settings.
+. Enter the `appliance_console` command. The *CloudForms Management Engine Appliance summary screen* displays.
+. Press `Enter` to manually configure settings.
 . Press the number for the item you want to change, and press 'Enter'. The options for your selection are displayed.
 . Follow the prompts to make the changes.
-. Press 'Enter' to accept a setting where applicable.
+. Press `Enter` to accept a setting where applicable.
 
 [NOTE]
 ======
@@ -42,10 +42,10 @@ A valid fully qualified hostname for the CloudForms Management Engine appliance 
 * Use *Restore Database from Backup* to restore the VMDB database from a previous backup.
 * Use *Setup Database Region* to create regions for VMDB replication.
 * Use *Configure Database* to configure the VMDB database. Use this option to configure the database for the appliance after installing and running it for the first time.
-* Use *Extend Temporary Storage* to add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at '/var/www/miq_tmp'. The appliance uses this temporary storage directory to perform certain image download functions.
+* Use *Extend Temporary Storage* to add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at `/var/www/miq_tmp`. The appliance uses this temporary storage directory to perform certain image download functions.
 * Use *Configure External Authentication (httpd)* to configure authentication through an IPA server.
 * Use *Generate Custom Encryption Key* to regenerate the encryption key used to encode plain text password.
-* Use *Harden Appliance Using SCAP Configuration* to apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the '/var/www/miq/lib/appliance_console/config/scap_rules.yml' file.
+* Use *Harden Appliance Using SCAP Configuration* to apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the `/var/www/miq/lib/appliance_console/config/scap_rules.yml` file.
 * Use *Stop Server Processes* to stop all server processes. You may need to do this to perform maintenance.
 * Use *Start Server Processes* to start the server. You may need to do this after performing maintenance.
 * Use *Restart Appliance* to restart the CloudForms Management Engine Appliance. You can either restart the appliance and clear the logs or just restart the appliance.
@@ -63,7 +63,7 @@ Before using CloudForms Management Engine, configure the database options for it
 
 [NOTE]
 ======
-See "CPU Sizing Assistant for a Dedicated VMDB Host" in the Deployment Planning Guide for guidelines on CPU requirements.
+See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#cpu_sizing_assistant_for_a_dedicated_vmdb_host[CPU Sizing Assistant for a Dedicated VMDB Host] in the Deployment Planning Guide for guidelines on CPU requirements.
 ======
 
 === Configuring an Internal Database
@@ -74,8 +74,8 @@ Before installing an internal database, add a disk to the infrastructure hosting
 ======
 
 . Start the appliance and open a terminal from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the root user.
-. Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the root user.
+. Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch an encryption key.
@@ -90,7 +90,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 Choose disk:
 ----
 +
-Enter *1* to choose '/dev/vdb' for the database location.
+Enter *1* to choose `/dev/vdb` for the database location.
 
 .  When prompted, enter a unique three digit region ID to create a new region.
 +
@@ -118,8 +118,8 @@ CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 ======
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the 'root' user.
-. Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
+. After starting the appliance, log in with a user name of 'root' and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch a security key.
@@ -138,9 +138,9 @@ CloudForms Management Engine configures the external database.
 
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
-. Start the appliance, and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the 'root' user.
-. Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
+. Start the appliance and open a terminal console from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of 'root' and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
