--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -12,7 +12,7 @@ The CloudForms Management Engine Appliance is intended to have minimal configura
 
 The procedure describes how to make changes to the configuration settings on the CloudForms Management Engine appliance.
 
-. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the *root* user.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the 'root' user.
 . Enter the `appliance_console` command. The *CloudForms Management Engine Appliance summary screen* displays.
 . Press `Enter` to manually configure settings.
 . Press the number for the item you want to change, and press 'Enter'. The options for your selection are displayed.
@@ -92,7 +92,7 @@ Choose disk:
 +
 Enter *1* to choose `/dev/vdb` for the database location.
 
-.  When prompted, enter a unique three digit region ID to create a new region.
+. When prompted, enter a unique three digit region ID to create a new region.
 +
 [IMPORTANT]
 ======
@@ -118,7 +118,7 @@ CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 ======
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of 'root' and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
 . Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
@@ -139,7 +139,7 @@ CloudForms Management Engine configures the external database.
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of 'root' and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
 . Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
