--- a/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
@@ -33,7 +33,7 @@ Use the following procedure to upload the CloudForms Management Engine Appliance
 
 . In the vSphere Client, select menu:File[Deploy OVF Template]. The *Deploy OVF Template wizard* appears.
 . Specify the source location and click *Next*.
-* Select *Deploy from File* to browse your file system for the OVF template, for example 'cfme-vsphere-5.4-43.x86_64.vsphere.ova'.
+* Select *Deploy from File* to browse your file system for the OVF template, for example `cfme-vsphere-5.4-43.x86_64.vsphere.ova`.
 * Select *Deploy from URL* to specify a URL to an OVF template located on the internet.
 . View the *OVF Template Details* page and click *Next*.
 . Select the deployment configuration from the drop-down menu and click *Next*. The option selected typically controls the memory settings, number of CPUs and reservations, and application-level configuration parameters. 
@@ -45,7 +45,7 @@ Use the following procedure to upload the CloudForms Management Engine Appliance
 * Select *Thin Provisioned* if the storage is allocated on demand as data is written to the virtual disks.
 * Select *Thick Provisioned* if all storage is immediately allocated.
 . For each network specified in the OVF template, select a network by right-clicking the *Destination Network* column in your infrastructure to set up the network mapping and click *Next*.
-. The +IP Allocation+ page does not require any configuration changes. Leave the default settings in the *IP Allocation* page and click *Next*.
+. The *IP Allocation* page does not require any configuration changes. Leave the default settings in the *IP Allocation* page and click *Next*.
 . Set the user-configurable properties and click *Next*. The properties to enter depend on the selected IP allocation scheme. For example, you are prompted for IP related information for the deployed virtual machines only in the case of a fixed IP allocation scheme.
 . Review your settings and click *Finish*.
 
