--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -20,24 +20,24 @@ After installing the CloudForms Management Engine Appliance, you must configure 
 
 Uploading the CloudForms Management Engine Appliance file onto Red Hat Enterprise Virtualization Management systems has the following requirements:
 
-* 44 GB of storage space on both the export domain and the local partition where '/tmp' resides since the 'OVF' archive is locally expanded into that directory.
-* Install the 'rhevm-image-uploader' package containing the 'engine-image-uploader' script to your local machine.
+* 44 GB of storage space on both the export domain and the local partition where `/tmp` resides since the `OVF` archive is locally expanded into that directory.
+* Install the `rhevm-image-uploader` package containing the `engine-image-uploader` script to your local machine.
 +
 ----
 # yum install rhevm-image-uploader
 ----
 +
-It is recommended to use '-v' (verbose logging) when using the 'engine-image-uploader' script to see the progression of the upload.
+It is recommended to use `-v` (verbose logging) when using the `engine-image-uploader` script to see the progression of the upload.
 * Depending on your infrastructure, allow approximately 90 minutes for the upload.
-* Once the 'OVF' is uploaded and imported as a template, add a network adapter to the template itself.
+* Once the `OVF` is uploaded and imported as a template, add a network adapter to the template itself.
 
 === Using the Image Uploader Tool
 
-The **engine-image-uploader** command allows you to list export storage domains and upload virtual machine images in 'OVF' format to an export storage domain and have them automatically recognized in the Red Hat Enterprise Virtualization Manager.
+The `engine-image-uploader` command allows you to list export storage domains and upload virtual machine images in `OVF` format to an export storage domain and have them automatically recognized in the Red Hat Enterprise Virtualization Manager.
 
 [NOTE]
 ======
-The image uploader only supports 'gzip-compressed OVF' files created by Red Hat Enterprise Virtualization.
+The image uploader only supports `gzip-compressed OVF` files created by Red Hat Enterprise Virtualization.
 ======
 
 The archive contains images and master directories in the following format:
@@ -66,7 +66,7 @@ The image uploader command supports two actions - list, and upload.
 
 You must specify one of the above actions when you use the image uploader command. Moreover, you must specify at least one local file to use the upload action.
 
-There are several parameters to further refine the *engine-image-uploader* command. You can set defaults for any of these parameters in the '/etc/ovirt-engine/imageuploader.conf' file.
+There are several parameters to further refine the `engine-image-uploader` command. You can set defaults for any of these parameters in the `/etc/ovirt-engine/imageuploader.conf` file.
 
 *General Options*
 
@@ -76,15 +76,15 @@ Displays information on how to use the image uploader command.
 
 *--conf-file=[PATH]*
 
-Sets *[PATH]* as the configuration file the command will use. The default is '/etc/ovirt-engine/imageuploader.conf'.
+Sets *[PATH]* as the configuration file the command will use. The default is `/etc/ovirt-engine/imageuploader.conf`.
 
 *--log-file=[PATH]*
 
-Sets +[PATH]+ as the specific file name the command will use to write log output. The default is +/var/log/ovirt-engine/ovirt-image-uploader/ovirt-image-uploader-[date].log+.
+Sets *[PATH]* as the specific file name the command will use to write log output. The default is `/var/log/ovirt-engine/ovirt-image-uploader/ovirt-image-uploader-[date].log`.
 
 *--cert-file=[PATH]*
 
-Sets *[PATH]* as the certificate for validating the engine. The default is '/etc/pki/ovirt-engine/ca.pem'.
+Sets *[PATH]* as the certificate for validating the engine. The default is `/etc/pki/ovirt-engine/ca.pem`.
 
 *-i, --insecure*
 
@@ -106,15 +106,15 @@ Force mode is necessary when the source file being uploaded has the same file na
 
 *-u [USER], --user=[USER]*
 
-Specifies the user whose credentials will be used to execute the command. The +[USER]+ is specified in the format **[username]@[domain]**. The user must exist in the specified domain and be known to the Red Hat Enterprise Virtualization Manager.
+Specifies the user whose credentials will be used to execute the command. The *[USER]* is specified in the format *[username]@[domain]*. The user must exist in the specified domain and be known to the Red Hat Enterprise Virtualization Manager.
 
 *-r [FQDN], --engine=[FQDN]*
 
-Specifies the IP address or fully qualified domain name of the Red Hat Enterprise Virtualization Manager from which the images will be uploaded. It is assumed that the image uploader is being run from the same machine on which the Red Hat Enterprise Virtualization Manager is installed. The default value is **localhost:443**.
+Specifies the IP address or fully qualified domain name of the Red Hat Enterprise Virtualization Manager from which the images will be uploaded. It is assumed that the image uploader is being run from the same machine on which the Red Hat Enterprise Virtualization Manager is installed. The default value is `localhost:443`.
 
 *Export Storage Domain Options*
 
-The following options specify the export domain to which the images will be uploaded. These options cannot be used together; you must used either the *-e* option or the *-n* option.
+The following options specify the export domain to which the images will be uploaded. These options cannot be used together; you must used either the `-e option or the `-n` option.
 
 *-e [EXPORT_DOMAIN], --export-domain=[EXPORT_DOMAIN]*
 
@@ -130,15 +130,15 @@ The following options allow you to customize which attributes of the images bein
 
 *-i, --ovf-id*
 
-Specifies that the 'UUID' of the image will not be updated. By default, the command generates a new 'UUID' for images that are uploaded. This ensures there is no conflict between the id of the image being uploaded and the images already in the environment.
+Specifies that the `UUID` of the image will not be updated. By default, the command generates a new `UUID` for images that are uploaded. This ensures there is no conflict between the id of the image being uploaded and the images already in the environment.
 
 *-d, --disk-instance-id*
 
-Specifies that the +instance ID+ for each disk in the image will not be renamed. By default, the command generates new +UUIDs+ for disks in images that are uploaded. This ensures there are no conflicts between the disks on the image being uploaded and the disks already in the environment.
+Specifies that the *instance ID* for each disk in the image will not be renamed. By default, the command generates new `UUIDs` for disks in images that are uploaded. This ensures there are no conflicts between the disks on the image being uploaded and the disks already in the environment.
 
 *-m, --mac-address*
 
-Specifies that network components in the image will not be removed from the image. By default, the command removes network interface cards from image being uploaded to prevent conflicts with network cards on other virtual machines already in the environment. If you do not use this option, you can use the +Administration Portal+ to add network interface cards to newly imported images and the Manager will ensure there are no 'MAC address' conflicts.
+Specifies that network components in the image will not be removed from the image. By default, the command removes network interface cards from image being uploaded to prevent conflicts with network cards on other virtual machines already in the environment. If you do not use this option, you can use the *Administration Portal* to add network interface cards to newly imported images and the Manager will ensure there are no `MAC address` conflicts.
 
 *-N [NEW_IMAGE_NAME], --name=[NEW_IMAGE_NAME]*
 
