--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -118,11 +118,11 @@ The following options specify the export domain to which the images will be uplo
 
 *-e [EXPORT_DOMAIN], --export-domain=[EXPORT_DOMAIN]*
 
-Sets the storage domain +EXPORT_DOMAIN+ as the destination for uploads.
+Sets the storage domain *EXPORT_DOMAIN* as the destination for uploads.
 
 *-n [NFSSERVER], --nfs-server=[NFSSERVER]*
 
-Sets the NFS path '[NFSSERVER]' as the destination for uploads.
+Sets the NFS path `[NFSSERVER]` as the destination for uploads.
 
 *Import Options*
 
@@ -177,8 +177,8 @@ The following procedure provides manual upload instructions if the Image Uploade
 
 . Log into a *host* in your Red Hat Enterprise Virtualization with a mount to the *Export storage domain*.
 . Change to the *Export storage domain's* directory.
-. Copy the CloudForms Management Engine Appliance 'OVF' archive to this directory.
-. Extract the 'OVF' file using the tar command:
+. Copy the CloudForms Management Engine Appliance `OVF` archive to this directory.
+. Extract the `OVF` file using the tar command:
 +
 ----
 $ tar xvf cfme-rhevm-5.3-15.x86_64.rhevm.ova  
