--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
@@ -27,8 +27,8 @@ Log in to your OpenStack dashboard to upload your CloudForms Management Engine A
 . From *Image Source* list, select *Image Location*. Note that currently only images available via an HTTP URL are supported.
 . In *Image Location*, add an external (HTTP) URL to load the image from.
   For example, *http://example.com/image.iso*.
-. From the *Format* list, select the image format. For example, 'ISO - Optical Disk Image'.
-. Specify the *Architecture*. For example, 'i386' for a 32-bit architecture or 'x86-64' for a 64-bit architecture.
+. From the *Format* list, select the image format. For example, `ISO - Optical Disk Image`.
+. Specify the *Architecture*. For example, `i386` for a 32-bit architecture or `x86-64` for a 64-bit architecture.
 . Leave the *Minimum Disk (GB)* and *Minimum RAM (MB)* fields empty.
 . Check the *Public* box to make the appliance available to all users.
 . Check the *Protected* box to protect the image from being accidentally deleted.
@@ -60,9 +60,9 @@ image:4941.png[title="Add Rule Dialog"]
 .. Select menu:Rule[Custom TCP Rule].
 .. Select menu:Direction[Ingress].
 .. Select *Port* from the *Open Port* list.
-.. Specify '443' in the *Port* field.
+.. Specify `443` in the *Port* field.
 .. Select *CIDR* from the *Remote* list.
-.. Specify '0.0.0.0/0' in the *CIDR* field.
+.. Specify `0.0.0.0/0` in the *CIDR* field.
 .. Click *Add*.
 
 === Creating a Custom Flavor for CloudForms Management Engine
@@ -95,7 +95,7 @@ A new flavor specific to CloudForms Management Engine is created.
 . Click *Launch Instance*.
 . Enter a name for the instance.
 . Select the custom flavor for your instance. The flavor selection determines the computing resources available to your instance. The resources used by the flavor are displayed in the *Flavor Details* pane.
-. Enter *1* in the +Instance Count+ field.
+. Enter *1* in the *Instance Count* field.
 . Select a boot option from the *Instance Boot Source* list:
 +
 * *Boot from image* - displays a new field for *Image Name*. Select the image from the drop-down list.
@@ -113,7 +113,7 @@ When you create an instance, Red Hat Enterprise Linux OpenStack Platform automat
 
 In addition to the fixed address, you can also assign a floating IP address to an instance. Unlike fixed IP addresses, you can modify floating IP addresses associations at any time, regardless of the state of the instances involved.
 
-. At the command-line on your RHEL OpenStack Platform host, create a pool of floating IP addresses using the 'nova-manage floating create' command. Replace *IP_BLOCK* with the desired block of IP addresses expressed in CIDR notation.
+. At the command-line on your RHEL OpenStack Platform host, create a pool of floating IP addresses using the `nova-manage floating create` command. Replace *IP_BLOCK* with the desired block of IP addresses expressed in CIDR notation.
 +
 ------
 $ nova-manage floating create IP_BLOCK  
