--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -1,7 +1,7 @@
 [[registering_and_updating_cloudforms_management_engine]]
 == Registering and Updating CloudForms Management Engine
 
-The +Red Hat Updates+ page, accessible from menu:Configure[Configuration > Region], enables you to edit customer information, register appliances, and update appliances. Editing customer information enables you to determine
+The *Red Hat Updates* page, accessible from menu:Configure[Configuration > Region], enables you to edit customer information, register appliances, and update appliances. Editing customer information enables you to determine
 the registration point, User ID, and password.
 Red Hat CloudForms prompts you to update the Server URL when updating the registration point to a local Red Hat Satellite. The *Status of Available Servers* area provides options to refresh, register, check for updates,
 and to update. The *Red Hat Updates* page enables the Content Delivery Network (CDN) to assign the necessary update packages to the CloudForms Management Engine Server.
@@ -79,8 +79,8 @@ The *Red Hat Updates* page enables you to check for updates and update registere
 |=======================================================================
 |Option|Use
 |Check for Updates| Checks for available updates using yum.
-|Register|Attempts to register the appliance if it is not already registered. CloudForms Management Engine subscribes to the 'rhel-x86_64-server-6-cf-me-4' RHN channel for RHN registered appliances, and to the products designated by Red Hat product certification for subscription-manager registered appliances. The Red Hat Enterprise Linux channels are enabled by default on registration. In addition, CloudForms Management Engine checks for updates after registering.
-|Apply CFME Update|Applies updates to CloudForms Management Engine packages only. Specifically, this option runs the 'yum -y update cfme-appliance' command. This command installs every package listed in the dependency tree if it is not already installed. If a specific version of a package is required, that version of the package is installed or upgraded. No other packages, such as PostgreSQL or Red Hat Enterprise Linux, are updated.
+|Register|Attempts to register the appliance if it is not already registered. CloudForms Management Engine subscribes to the `rhel-x86_64-server-6-cf-me-4` RHN channel for RHN registered appliances, and to the products designated by Red Hat product certification for subscription-manager registered appliances. The Red Hat Enterprise Linux channels are enabled by default on registration. In addition, CloudForms Management Engine checks for updates after registering.
+|Apply CFME Update|Applies updates to CloudForms Management Engine packages only. Specifically, this option runs the `yum -y update cfme-appliance` command. This command installs every package listed in the dependency tree if it is not already installed. If a specific version of a package is required, that version of the package is installed or upgraded. No other packages, such as PostgreSQL or Red Hat Enterprise Linux, are updated.
 |=======================================================================
 
 === Updating the Appliance Operating System
@@ -88,7 +88,7 @@ The *Red Hat Updates* page enables you to check for updates and update registere
 Users update CloudForms Management Engine packages through the web console under menu:Configure[Configuration > Settings > Region > Red Hat Updates]. However, updating the Appliance's operating system requires a manual update using the 'yum' command.
 
 . Log in to the Appliance as the root user.
-. Run the 'yum update' command and confirm any updates.
+. Run the `yum update` command and confirm any updates.
 +
 ----
 # yum update
